# VideoLearn

./: build.gradle  gradle.properties  local.properties  settings.gradle  versions.gradle
app/: build.gradle
app/src/androidTest/java/com/lqk/videolearn/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: fragment.frag
app/src/main/assets/image/: sglview.frag  sglview.vert  sglview_filter.frag
app/src/main/assets/shader/oes/: oes_base.vert
app/src/main/assets/shape/: ball.vert  ball_tex.frag  ball_tex.vert  cone.vert  triangleEquilateral.vert  trianglecolor.vert
app/src/main/java/com/lqk/videolearn/: MainActivity.java  MainActivity.kt
app/src/main/res/layout/: activity_camera.xml  activity_double_decoder.xml  activity_fglview.xml  activity_glv3.xml  activity_main.xml  activity_player_frame.xml  activity_sglview.xml  activity_ssview.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/lqk/videolearn/: ExampleUnitTest.java
ffmpeg_4_2_2/: build.gradle  build_android_64_clang.sh  build_ffmpeg.sh
ffmpeg_4_2_2/src/androidTest/java/com/example/ffmpeg_4_2_2/: ExampleInstrumentedTest.java
ffmpeg_4_2_2/src/main/: AndroidManifest.xml
ffmpeg_4_2_2/src/main/cpp/: CMakeLists.txt  jniImpl.cpp
ffmpeg_4_2_2/src/main/cpp/util/: LogUtil.h
ffmpeg_4_2_2/src/main/java/com/example/ffmpeg_4_2_2/: FFmpegMainActivity.java  NativeApi.java
ffmpeg_4_2_2/src/main/res/layout/: ffmpeg_main_layout.xml
gradle/wrapper/: gradle-wrapper.properties
ndk_glv3/: build.gradle
ndk_glv3/src/main/: AndroidManifest.xml
ndk_glv3/src/main/cpp/: CMakeLists.txt  jniImpl.cpp
ndk_glv3/src/main/cpp/render/: MyGLRenderContext.cpp  MyGLRenderContext.h
ndk_glv3/src/main/cpp/sample/: GLSampleBase.h  TriangleSample.cpp  TriangleSample.h
ndk_glv3/src/main/res/values/: strings.xml
(+63 files in other folders)
